src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Annual_Enrollments_per_Seat__c</fullName>
        <description>Number of annual enrollments per seat</description>
        <label>Annual Enrollments per Seat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Price_per_Enrollment_Old__c</fullName>
        <inlineHelpText>Annual Price per Enrollment</inlineHelpText>
        <label>Annual Price per Enrollment_Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Of_Courses_Per_User__c</fullName>
        <label>Number Of Courses Per User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Enrollments_Old__c</fullName>
        <label>Number of Enrollments_Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Line_Item_Id__c</fullName>
        <description>18 digit line item record id created for referring on Quote line item id</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>18 digit line item record id</inlineHelpText>
        <label>18 Digit Line Item Id</label>
        <type>Text</type>
    </fields>
</CustomObject>